Bug 1161888 - Remove first CKPD flag and do not set |mDialingRequestProcessed| flag to avoid the redundant HFP_AT_RESPONSE_OK. r=shuang, a=jocheng